# obs-studio

./: .gitignore  AUTHORS  CMakeLists.txt  list  txt
UI/: source-tree.cpp  source-tree.hpp  window-basic-main.hpp  window-basic-source-select.cpp
cmake/Modules/: ObsHelpers.cmake
libobs/: CMakeLists.txt  obs-internal.h  obs-scene.c  obs-scene.h  obs-source.c  obs-source.h  obs-video.c  obs.c  obs.h
libobs/util/: shash.c  shash.h
plugins/: CMakeLists.txt  list
plugins/mac-syphon/: syphon.m
plugins/obs-filters/: CMakeLists.txt  text-filter.c
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-tag/: CMakeLists.txt  Makefile  lhash.c  main.json  obs-sourceview.c  obs-tag.c  shash.c  tft.c  tft.h
plugins/obs-tag/data/locale/: en-US.ini  zh-CN.ini
plugins/obs-transitions/: .transition-fade.c.swo  transition-fade.c
plugins/text-freetype2/: text-freetype2.c
tft/: Makefile  box.c  long_hash.c  long_hash.h  main  main.json  simple.json  simple_hash.c  simple_hash.h  tft.c  tft.h  tft_bak1.c  tft_bak2.c
